[workspace]

members = [
  "crates/hc-utils",
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[patch.crates-io]
hdk = {git = "https://github.com/holochain/holochain.git", rev = "42980564b649169144b8f30021dc421e0f422e6b", package = "hdk"}
holo_hash = {git = "https://github.com/holochain/holochain.git", rev = "42980564b649169144b8f30021dc421e0f422e6b", package = "holo_hash"}
