[package]
name = "hc_utils"
version = "0.1.0"
description = "Helper functions for holochain hdk development"
homepage = "https://github.com/holochain/hc-utils"
license = "Apache-2.0"
authors = ["zo-el <joel.ulahanna@holo.host>"]
keywords = [ "holochain", "holo", "hdk", "hdk-helpers"]
categories = [ "cryptography" ]
readme = "README.md"
edition = "2021"

[dependencies]
serde = "1.0"
hdk = { version = "=0.1.0", features = ["encoding"] }
thiserror = "1.0"

[lib]
name = "hc_utils"
path = "src/lib.rs"
# "cargo test --doc" doctests are not performed with the "cdylib" crate-type
crate-type = ["cdylib", "rlib"]
